# wasm-murmur3

./: .gitignore  Cargo.toml  README.md
pkg/: LICENSE_MIT  package.json  wasm_murmur3.d.ts  wasm_murmur3.js  wasm_murmur3_bg.wasm  wasm_murmur3_bg.wasm.d.ts
src/: lib.rs
