
[package]
name = "wasm-murmur3"
version = "0.1.2"
authors = ["chantzekin <z.chantzekin@gmail.com>"]
description = "A WebAssembly implementation of the fast, non-cryptographic hash mumrur3"
license = "MIT"
repository = "https://github.com/chantzekin/wasm-murmur3"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.33"
wasm-bindgen = "0.2.74"
murmur3 = "0.5.1"
hex = "0.4.2"

[profile.release]
opt-level = "s"
